deploy/gke/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openreport
  labels:
    name: openreport
    app: openreport
